apps/ingress/argocd-ingress.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: argo
#   labels:
#     app.kubernetes.io/name: argocd-server
# spec:
#   selector:
#     app.kubernetes.io/name: argocd-server
#   ports:
#   - name: http
#     port: 80
#     protocol: TCP
#     targetPort: 8080
#   - name: https
#     port: 443
#     protocol: TCP
#     targetPort: 8080
#   type: LoadBalancer

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.ingressClassName: "nginx"  # Use the correct Ingress class
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  rules:
  - host: argocd.local  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
